@@ -576,7 +576,7 @@ public final class Anubis extends BaseCipher
           {
             result = testKat(KAT_KEY, KAT_CT);
           }
-        valid = new Boolean(result);
+        valid = Boolean.valueOf(result);
       }
     return valid.booleanValue();
   }
